tests/fail/type_alias_union.py
int_or_float = int | float

c: int_or_float = "test"
